@@ -1,38 +1,49 @@
 package uk.gov.companieshouse.web.pps.service.penaltypayment.impl;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.when;
-
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.api.client.http.HttpHeaders;
 import com.google.api.client.http.HttpResponseException;
-import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.companieshouse.api.ApiClient;
 import uk.gov.companieshouse.api.error.ApiErrorResponseException;
 import uk.gov.companieshouse.api.handler.exception.URIValidationException;
-import uk.gov.companieshouse.api.handler.latefilingpenalty.e5latefilingpenalty.FinanceHealthcheckResourceHandler;
-import uk.gov.companieshouse.api.handler.latefilingpenalty.e5latefilingpenalty.LateFilingPenaltyResourceHandler;
-import uk.gov.companieshouse.api.handler.latefilingpenalty.e5latefilingpenalty.request.HealthcheckGet;
-import uk.gov.companieshouse.api.handler.latefilingpenalty.e5latefilingpenalty.request.LateFilingPenaltyGet;
+import uk.gov.companieshouse.api.handler.financialpenalty.e5financialpenalty.FinanceHealthcheckResourceHandler;
+import uk.gov.companieshouse.api.handler.financialpenalty.e5financialpenalty.FinancialPenaltyResourceHandler;
+import uk.gov.companieshouse.api.handler.financialpenalty.e5financialpenalty.request.FinanceHealthcheckGet;
+import uk.gov.companieshouse.api.handler.financialpenalty.e5financialpenalty.request.FinancialPenaltiesGet;
 import uk.gov.companieshouse.api.model.ApiResponse;
-import uk.gov.companieshouse.api.model.latefilingpenalty.FinanceHealthcheck;
-import uk.gov.companieshouse.api.model.latefilingpenalty.FinanceHealthcheckStatus;
-import uk.gov.companieshouse.api.model.latefilingpenalty.LateFilingPenalties;
-import uk.gov.companieshouse.api.model.latefilingpenalty.LateFilingPenalty;
+import uk.gov.companieshouse.api.model.financialpenalty.FinanceHealthcheck;
+import uk.gov.companieshouse.api.model.financialpenalty.FinanceHealthcheckStatus;
+import uk.gov.companieshouse.api.model.financialpenalty.FinancialPenalties;
+import uk.gov.companieshouse.api.model.financialpenalty.FinancialPenalty;
+import uk.gov.companieshouse.api.model.financialpenalty.PayableStatus;
 import uk.gov.companieshouse.web.pps.api.ApiClientService;
 import uk.gov.companieshouse.web.pps.exception.ServiceException;
 import uk.gov.companieshouse.web.pps.service.penaltypayment.PenaltyPaymentService;
 import uk.gov.companieshouse.web.pps.util.PPSTestUtility;
-import uk.gov.companieshouse.web.pps.util.PenaltyReference;
+
+import java.io.IOException;
+import java.time.LocalDate;
+import java.util.List;
+
+import static java.time.LocalDate.now;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.when;
+import static uk.gov.companieshouse.api.model.financialpenalty.PayableStatus.CLOSED;
+import static uk.gov.companieshouse.api.model.financialpenalty.PayableStatus.OPEN;
+import static uk.gov.companieshouse.web.pps.service.penaltypayment.impl.PenaltyPaymentServiceImpl.OTHER_TYPE;
+import static uk.gov.companieshouse.web.pps.service.penaltypayment.impl.PenaltyPaymentServiceImpl.PENALTY_TYPE;
+import static uk.gov.companieshouse.web.pps.util.PenaltyReference.LATE_FILING;
+import static uk.gov.companieshouse.web.pps.util.PenaltyReference.SANCTIONS;
 
 @ExtendWith(MockitoExtension.class)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
@@ -45,170 +56,282 @@ class PenaltyPaymentServiceImplTest {
     private ApiClientService apiClientService;
 
     @Mock
-    private LateFilingPenaltyResourceHandler lateFilingPenaltyResourceHandler;
+    private FinancialPenaltyResourceHandler financialPenaltyResourceHandler;
 
     @Mock
     private FinanceHealthcheckResourceHandler financeHealthcheckResourceHandler;
 
     @Mock
-    private LateFilingPenaltyGet lateFilingPenaltyGet;
+    private FinancialPenaltiesGet financialPenaltiesGet;
 
     @Mock
-    private HealthcheckGet healthcheckGet;
+    private FinanceHealthcheckGet financeHealthcheckGet;
 
     @Mock
-    private ApiResponse<LateFilingPenalties> responseWithData;
+    private ApiResponse<FinancialPenalties> responseWithData;
 
     @Mock
     private ApiResponse<FinanceHealthcheck> healthcheckApiResponse;
 
-    @InjectMocks
-    private PenaltyPaymentService mockPenaltyPaymentService = new PenaltyPaymentServiceImpl();
+    private PenaltyPaymentService penaltyPaymentService;
 
     private static final String COMPANY_NUMBER = "12345678";
 
     private static final String PENALTY_REF = "A9876543";
     private static final String PENALTY_REF_TWO = "A0000001";
 
-    private static final String GET_LFP_URI =
-            "/company/" + COMPANY_NUMBER + "/penalties/late-filing/" + PenaltyReference.LATE_FILING;
+    private static final String GET_FINANCIAL_PENALTIES_LATE_FILING_URI =
+            "/company/" + COMPANY_NUMBER + "/penalties/" + LATE_FILING;
+
+    private static final String GET_FINANCIAL_PENALTIES_SANCTIONS_URI =
+            "/company/" + COMPANY_NUMBER + "/penalties/" + SANCTIONS;
 
     private static final String GET_FINANCE_HEALTHCHECK_URI = "/penalty-payment-api/healthcheck/finance-system";
 
     private static final String MAINTENANCE_END_TIME = "2019-11-08T23:00:12Z";
 
+    private static final String LATE_FILING_OF_ACCOUNTS_REASON = "Late filing of accounts";
+    private static final String FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON = "Failure to file a confirmation statement";
+    private static final String PENALTY_REASON = "Penalty";
+
     @BeforeEach
     void init() {
+        penaltyPaymentService = new PenaltyPaymentServiceImpl(apiClientService);
+
         when(apiClientService.getPublicApiClient()).thenReturn(apiClient);
     }
 
     /**
-     * Get Payable Late Filing Penalty tests.
+     * Get payable financial penalties tests.
      */
     @Test
-    @DisplayName("Get Payable Late Filing Penalties - Success Path")
-    void getPayableLateFilingPenaltiesSuccess()
+    @DisplayName("Get payable financial penalties - Success Path")
+    void getPayableFinancialPenaltiesSuccess()
             throws ServiceException, ApiErrorResponseException, URIValidationException {
-        when(apiClient.lateFilingPenalty()).thenReturn(lateFilingPenaltyResourceHandler);
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
 
-        LateFilingPenalty validLateFilingPenalty = PPSTestUtility.validLateFilingPenalty(
-                PENALTY_REF);
+        FinancialPenalty validFinancialPenalty = PPSTestUtility.validFinancialPenalty(PENALTY_REF, now().minusYears(1).toString());
 
-        when(lateFilingPenaltyResourceHandler.get(GET_LFP_URI)).thenReturn(lateFilingPenaltyGet);
-        when(lateFilingPenaltyGet.execute()).thenReturn(responseWithData);
+        when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_LATE_FILING_URI)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
 
         when(responseWithData.getData()).thenReturn(
-                PPSTestUtility.oneLateFilingPenalties(validLateFilingPenalty)
+                PPSTestUtility.oneFinancialPenalties(validFinancialPenalty)
         );
 
-        List<LateFilingPenalty> payableLateFilingPenalties =
-                mockPenaltyPaymentService.getLateFilingPenalties(COMPANY_NUMBER, PENALTY_REF);
+        List<FinancialPenalty> payableFinancialPenalties =
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF);
 
-        assertEquals(1, payableLateFilingPenalties.size());
-        assertEquals(validLateFilingPenalty, payableLateFilingPenalties.getFirst());
+        assertEquals(1, payableFinancialPenalties.size());
+        assertEquals(validFinancialPenalty, payableFinancialPenalties.getFirst());
     }
 
     @Test
-    @DisplayName("Get Payable Late Filing Penalties - Two Unpaid Penalties")
-    void getPayableLateFilingPenaltiesTwoUnpaid()
+    @DisplayName("Get payable financial penalties - Two Unpaid Penalties")
+    void getPayableFinancialPenaltiesTwoUnpaid()
             throws ServiceException, ApiErrorResponseException, URIValidationException {
-        when(apiClient.lateFilingPenalty()).thenReturn(lateFilingPenaltyResourceHandler);
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
 
-        LateFilingPenalty validLateFilingPenalty1 = PPSTestUtility.validLateFilingPenalty(
-                PENALTY_REF);
-        LateFilingPenalty validLateFilingPenalty2 = PPSTestUtility.validLateFilingPenalty(
-                PENALTY_REF_TWO);
+        LocalDate madeUpDate = now();
+        FinancialPenalty validLateFilingPenalty1 = PPSTestUtility.validFinancialPenalty(
+                PENALTY_REF, madeUpDate.minusYears(2).toString());
+        FinancialPenalty validLateFilingPenalty2 = PPSTestUtility.validFinancialPenalty(
+                PENALTY_REF_TWO, madeUpDate.minusYears(1).toString());
 
-        when(lateFilingPenaltyResourceHandler.get(GET_LFP_URI)).thenReturn(lateFilingPenaltyGet);
-        when(lateFilingPenaltyGet.execute()).thenReturn(responseWithData);
+        when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_LATE_FILING_URI)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
 
         when(responseWithData.getData()).thenReturn(
-                PPSTestUtility.twoLateFilingPenalties(validLateFilingPenalty1,
+                PPSTestUtility.twoFinancialPenalties(validLateFilingPenalty1,
                         validLateFilingPenalty2)
         );
 
-        List<LateFilingPenalty> payableLateFilingPenalties =
-                mockPenaltyPaymentService.getLateFilingPenalties(COMPANY_NUMBER, PENALTY_REF);
+        List<FinancialPenalty> payableFinancialPenalties =
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF_TWO);
+        assertEquals(1, payableFinancialPenalties.size());
+        assertEquals(validLateFilingPenalty2, payableFinancialPenalties.getFirst());
 
-        assertEquals(2, payableLateFilingPenalties.size());
-        assertEquals(validLateFilingPenalty1, payableLateFilingPenalties.get(0));
-        assertEquals(validLateFilingPenalty2, payableLateFilingPenalties.get(1));
+        payableFinancialPenalties =
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF);
+        assertEquals(1, payableFinancialPenalties.size());
+        assertEquals(validLateFilingPenalty1, payableFinancialPenalties.getFirst());
     }
 
     @Test
-    @DisplayName("Get Payable Late Filing Penalties - No Unpaid Penalties")
-    void getPayableLateFilingPenaltiesNoPenalties()
-            throws ServiceException, ApiErrorResponseException, URIValidationException {
-        when(apiClient.lateFilingPenalty()).thenReturn(lateFilingPenaltyResourceHandler);
+    @DisplayName("Get payable financial penalties with multiple payable late filing")
+    void getPayableFinancialPenaltiesWithMultiplePayableLateFiling() throws IOException, URIValidationException, ServiceException {
 
-        when(lateFilingPenaltyResourceHandler.get(GET_LFP_URI)).thenReturn(lateFilingPenaltyGet);
-        when(lateFilingPenaltyGet.execute()).thenReturn(responseWithData);
+        FinancialPenalties financialPenaltiesResponse = new ObjectMapper().readValue(
+                this.getClass().getClassLoader().getResource("company_12345678_penalties_LATE_FILING_response.json"),
+                FinancialPenalties.class);
+        assertNotNull(financialPenaltiesResponse.getItems());
+
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
+
+        when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_LATE_FILING_URI)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
+
+        when(responseWithData.getData()).thenReturn(financialPenaltiesResponse);
+
+        List<FinancialPenalty> penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A1234567");
+        assertSinglePenalty(penaltyAndCosts, 150, LATE_FILING_OF_ACCOUNTS_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A0000003");
+        assertSinglePenalty(penaltyAndCosts, 1210, LATE_FILING_OF_ACCOUNTS_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A0000004");
+        assertSinglePenalty(penaltyAndCosts, 750, LATE_FILING_OF_ACCOUNTS_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A0000002");
+        assertSinglePenalty(penaltyAndCosts, 0, LATE_FILING_OF_ACCOUNTS_REASON, CLOSED);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "A0000001");
+        assertEquals(3, penaltyAndCosts.size());
+        final var penalty = penaltyAndCosts.getFirst();
+        assertEquals(3000, penalty.getOutstanding());
+        assertEquals(PENALTY_TYPE, penalty.getType());
+        assertEquals(LATE_FILING_OF_ACCOUNTS_REASON, penalty.getReason());
+        assertEquals(CLOSED, penalty.getPayableStatus());
+
+        var cost1 = penaltyAndCosts.get(1);
+        assertEquals(105, cost1.getOutstanding());
+        assertEquals(OTHER_TYPE, cost1.getType());
+        assertEquals(LATE_FILING_OF_ACCOUNTS_REASON, cost1.getReason());
+        assertEquals(CLOSED, cost1.getPayableStatus());
+
+        var cost2 = penaltyAndCosts.get(2);
+        assertEquals(80, cost2.getOutstanding());
+        assertEquals(OTHER_TYPE, cost2.getType());
+        assertEquals(LATE_FILING_OF_ACCOUNTS_REASON, cost2.getReason());
+        assertEquals(CLOSED, cost2.getPayableStatus());
+    }
+
+    @Test
+    @DisplayName("Get payable financial penalties with multiple payable sanctions")
+    void getPayableFinancialPenaltiesWithMultiplePayableSanctions() throws IOException, URIValidationException, ServiceException {
+
+        FinancialPenalties financialPenaltiesResponse = new ObjectMapper().readValue(
+                this.getClass().getClassLoader().getResource("company_12345678_penalties_SANCTIONS_response.json"),
+                FinancialPenalties.class);
+        assertNotNull(financialPenaltiesResponse.getItems());
+
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
+
+        when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_SANCTIONS_URI)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
+
+        when(responseWithData.getData()).thenReturn(financialPenaltiesResponse);
+
+        List<FinancialPenalty> penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P1234567");
+        assertSinglePenalty(penaltyAndCosts, 250, FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P0000600");
+        assertSinglePenalty(penaltyAndCosts, 600, FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P0000601");
+        assertSinglePenalty(penaltyAndCosts, 601, FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, OPEN);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P0000602");
+        assertSinglePenalty(penaltyAndCosts, 0, FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, CLOSED);
+
+        penaltyAndCosts = penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, "P0000603");
+        assertEquals(2, penaltyAndCosts.size());
+        final var penalty = penaltyAndCosts.getFirst();
+        assertEquals(603, penalty.getOutstanding());
+        assertEquals(PENALTY_TYPE, penalty.getType());
+        assertEquals(FAILURE_TO_FILE_A_CONFIRMATION_STATEMENT_REASON, penalty.getReason());
+        assertEquals(OPEN, penalty.getPayableStatus());
+
+        var other = penaltyAndCosts.get(1);
+        assertEquals(105, other.getOutstanding());
+        assertEquals(OTHER_TYPE, other.getType());
+        assertEquals(PENALTY_REASON, other.getReason());
+        assertEquals(CLOSED, other.getPayableStatus());
+    }
+
+    private static void assertSinglePenalty(List<FinancialPenalty> penaltyAndCosts,
+            Integer expectedOutstanding, String reason, PayableStatus expectedPayableStatus) {
+        assertEquals(1, penaltyAndCosts.size());
+        final var financialPenalty = penaltyAndCosts.getFirst();
+        assertEquals(expectedOutstanding, financialPenalty.getOutstanding());
+        assertEquals(PENALTY_TYPE, financialPenalty.getType());
+        assertEquals(reason, financialPenalty.getReason());
+        assertEquals(expectedPayableStatus, financialPenalty.getPayableStatus());
+    }
+
+    @Test
+    @DisplayName("Get payable financial penalties - No Unpaid Penalties")
+    void getPayableFinancialPenaltiesNoPenalties()
+            throws ServiceException, ApiErrorResponseException, URIValidationException {
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
+
+        when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_LATE_FILING_URI)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
 
         when(responseWithData.getData()).thenReturn(
                 PPSTestUtility.noPenalties()
         );
 
-        List<LateFilingPenalty> payableLateFilingPenalties =
-                mockPenaltyPaymentService.getLateFilingPenalties(COMPANY_NUMBER, PENALTY_REF);
+        List<FinancialPenalty> payableFinancialPenalties =
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF);
 
-        assertEquals(0, payableLateFilingPenalties.size());
+        assertEquals(0, payableFinancialPenalties.size());
     }
 
     @Test
-    @DisplayName("Get Payable Late Filing Penalties - Paid Penalty")
-    void getPayableLateFilingPenaltiesPaidPenalty()
+    @DisplayName("Get payable financial penalties - Paid Penalty")
+    void getPayableFinancialPenaltiesPaidPenalty()
             throws ServiceException, ApiErrorResponseException, URIValidationException {
-        when(apiClient.lateFilingPenalty()).thenReturn(lateFilingPenaltyResourceHandler);
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
 
-        String uri = "/company/" + COMPANY_NUMBER + "/penalties/late-filing/"
-                + PenaltyReference.LATE_FILING;
-        LateFilingPenalty paidLateFilingPenalty = PPSTestUtility.paidLateFilingPenalty(
-                PENALTY_REF);
+        String uri = "/company/" + COMPANY_NUMBER + "/penalties/" + LATE_FILING;
+        FinancialPenalty paidFinancialPenalty = PPSTestUtility.paidFinancialPenalty(
+                PENALTY_REF, now().minusYears(1).toString());
 
-        when(lateFilingPenaltyResourceHandler.get(uri)).thenReturn(lateFilingPenaltyGet);
-        when(lateFilingPenaltyGet.execute()).thenReturn(responseWithData);
+        when(financialPenaltyResourceHandler.get(uri)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenReturn(responseWithData);
 
         when(responseWithData.getData()).thenReturn(
-                PPSTestUtility.oneLateFilingPenalties(paidLateFilingPenalty)
+                PPSTestUtility.oneFinancialPenalties(paidFinancialPenalty)
         );
 
-        List<LateFilingPenalty> payableLateFilingPenalties =
-                mockPenaltyPaymentService.getLateFilingPenalties(COMPANY_NUMBER, PENALTY_REF_TWO);
+        List<FinancialPenalty> payableFinancialPenalties =
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF_TWO);
 
-        assertEquals(0, payableLateFilingPenalties.size());
+        assertEquals(0, payableFinancialPenalties.size());
     }
 
     @Test
-    @DisplayName("Get Payable Late Filing Penalties - Throws ApiErrorResponseException")
-    void getPayableLateFilingPenaltiesThrowsApiErrorResponseException()
+    @DisplayName("Get payable financial penalties - Throws ApiErrorResponseException")
+    void getPayableFinancialPenaltiesThrowsApiErrorResponseException()
             throws ApiErrorResponseException, URIValidationException {
-        when(apiClient.lateFilingPenalty()).thenReturn(lateFilingPenaltyResourceHandler);
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
 
-        when(lateFilingPenaltyResourceHandler.get(GET_LFP_URI)).thenReturn(lateFilingPenaltyGet);
-        when(lateFilingPenaltyGet.execute()).thenThrow(ApiErrorResponseException.class);
+        when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_LATE_FILING_URI)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenThrow(ApiErrorResponseException.class);
 
         assertThrows(ServiceException.class, () ->
-                mockPenaltyPaymentService.getLateFilingPenalties(COMPANY_NUMBER, PENALTY_REF));
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF));
     }
 
     @Test
-    @DisplayName("Get Payable Late Filing Penalties - Throws URIValidationException")
-    void getPayableLateFilingPenaltiesThrowsURIValidationException()
+    @DisplayName("Get payable financial penalties - Throws URIValidationException")
+    void getPayableFinancialPenaltiesThrowsURIValidationException()
             throws ApiErrorResponseException, URIValidationException, IllegalArgumentException {
-        when(apiClient.lateFilingPenalty()).thenReturn(lateFilingPenaltyResourceHandler);
+        when(apiClient.financialPenalty()).thenReturn(financialPenaltyResourceHandler);
 
-        when(lateFilingPenaltyResourceHandler.get(GET_LFP_URI)).thenReturn(lateFilingPenaltyGet);
-        when(lateFilingPenaltyGet.execute()).thenThrow(URIValidationException.class);
+        when(financialPenaltyResourceHandler.get(GET_FINANCIAL_PENALTIES_LATE_FILING_URI)).thenReturn(financialPenaltiesGet);
+        when(financialPenaltiesGet.execute()).thenThrow(URIValidationException.class);
 
         assertThrows(ServiceException.class, () ->
-                mockPenaltyPaymentService.getLateFilingPenalties(COMPANY_NUMBER, PENALTY_REF));
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, PENALTY_REF));
     }
 
     @Test
-    @DisplayName("Get Payable Late Filing Penalties - Throws IllegalArgumentException when penalty reference is invalid")
-    void getPayableLateFilingPenaltiesThrowsIllegalArgumentExceptionWhenPenaltyReferenceIsInvalid() {
+    @DisplayName("Get payable financial penalties - Throws IllegalArgumentException when penalty reference is invalid")
+    void getPayableFinancialPenaltiesThrowsIllegalArgumentExceptionWhenPenaltyReferenceIsInvalid() {
         assertThrows(ServiceException.class, () ->
-                mockPenaltyPaymentService.getLateFilingPenalties(COMPANY_NUMBER, ""));
+                penaltyPaymentService.getFinancialPenalties(COMPANY_NUMBER, ""));
     }
 
     @Test
@@ -221,11 +344,11 @@ class PenaltyPaymentServiceImplTest {
         FinanceHealthcheck financeHealthcheckHealthy = PPSTestUtility.financeHealthcheckHealthy();
 
         when(financeHealthcheckResourceHandler.get(GET_FINANCE_HEALTHCHECK_URI)).thenReturn(
-                healthcheckGet);
-        when(healthcheckGet.execute()).thenReturn(healthcheckApiResponse);
+                financeHealthcheckGet);
+        when(financeHealthcheckGet.execute()).thenReturn(healthcheckApiResponse);
         when(healthcheckApiResponse.getData()).thenReturn(financeHealthcheckHealthy);
 
-        FinanceHealthcheck financeHealthcheck = mockPenaltyPaymentService.checkFinanceSystemAvailableTime();
+        FinanceHealthcheck financeHealthcheck = penaltyPaymentService.checkFinanceSystemAvailableTime();
 
         assertEquals(FinanceHealthcheckStatus.HEALTHY.getStatus(), financeHealthcheck.getMessage());
         assertNull(financeHealthcheck.getMaintenanceEndTime());
@@ -239,11 +362,11 @@ class PenaltyPaymentServiceImplTest {
                 financeHealthcheckResourceHandler);
 
         when(financeHealthcheckResourceHandler.get(GET_FINANCE_HEALTHCHECK_URI)).thenReturn(
-                healthcheckGet);
-        when(healthcheckGet.execute()).thenThrow(
+                financeHealthcheckGet);
+        when(financeHealthcheckGet.execute()).thenThrow(
                 new ApiErrorResponseException(serviceUnavailablePlannedMaintenance()));
 
-        FinanceHealthcheck financeHealthcheck = mockPenaltyPaymentService.checkFinanceSystemAvailableTime();
+        FinanceHealthcheck financeHealthcheck = penaltyPaymentService.checkFinanceSystemAvailableTime();
 
         assertEquals(FinanceHealthcheckStatus.UNHEALTHY_PLANNED_MAINTENANCE.getStatus(),
                 financeHealthcheck.getMessage());
@@ -258,11 +381,11 @@ class PenaltyPaymentServiceImplTest {
                 financeHealthcheckResourceHandler);
 
         when(financeHealthcheckResourceHandler.get(GET_FINANCE_HEALTHCHECK_URI)).thenReturn(
-                healthcheckGet);
-        when(healthcheckGet.execute()).thenThrow(URIValidationException.class);
+                financeHealthcheckGet);
+        when(financeHealthcheckGet.execute()).thenThrow(URIValidationException.class);
 
         assertThrows(ServiceException.class, () ->
-                mockPenaltyPaymentService.checkFinanceSystemAvailableTime());
+                penaltyPaymentService.checkFinanceSystemAvailableTime());
     }
 
     @Test
@@ -273,11 +396,11 @@ class PenaltyPaymentServiceImplTest {
                 financeHealthcheckResourceHandler);
 
         when(financeHealthcheckResourceHandler.get(GET_FINANCE_HEALTHCHECK_URI)).thenReturn(
-                healthcheckGet);
-        when(healthcheckGet.execute()).thenThrow(ApiErrorResponseException.class);
+                financeHealthcheckGet);
+        when(financeHealthcheckGet.execute()).thenThrow(ApiErrorResponseException.class);
 
         assertThrows(ServiceException.class, () ->
-                mockPenaltyPaymentService.checkFinanceSystemAvailableTime());
+                penaltyPaymentService.checkFinanceSystemAvailableTime());
     }
 
     public static HttpResponseException.Builder serviceUnavailablePlannedMaintenance() {
